Make rain particles wrap around a box around the owner actor

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -54,3 +54,10 @@ ConnectionType=USBOnly
 bUseManualIPAddress=False
 ManualIPAddress=
 
+
+[CoreRedirects]
++StructRedirects=(OldName="/Script/Demos.WeatherEffectsParams",NewName="/Script/Demos.WeatherEffectsReferences")
+
+[/Script/EngineSettings.GameMapsSettings]
+GlobalDefaultGameMode=/Game/DemosGameMode.DemosGameMode_C
+
