Rework interactables as components instead of actor/pawns Add ClassGroup to meta UCLASS

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -57,6 +57,7 @@ ManualIPAddress=
 
 [CoreRedirects]
 +StructRedirects=(OldName="/Script/Demos.WeatherEffectsParams",NewName="/Script/Demos.WeatherEffectsReferences")
++ClassRedirects=(OldName="/Script/Interactable.AInteractorActor",NewName="/Script/Interactable.InteractorActor")
 
 [/Script/EngineSettings.GameMapsSettings]
 GlobalDefaultGameMode=/Game/DemosGameMode.DemosGameMode_C
