basic raycast probe for interactable, create blueprint events for OnStart and OnEnd Interaction enable custom stencil depth

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -31,6 +31,7 @@ r.Mobile.ShadingPath=1
 r.Mobile.AllowDeferredShadingOpenGL=True
 r.DefaultFeature.AutoExposure.Method=1
 r.Shadow.CSMCaching=True
+r.CustomDepth=3
 
 [/Script/WorldPartitionEditor.WorldPartitionEditorSettings]
 CommandletClass=Class'/Script/UnrealEd.WorldPartitionConvertCommandlet'
@@ -58,6 +59,8 @@ ManualIPAddress=
 [CoreRedirects]
 +StructRedirects=(OldName="/Script/Demos.WeatherEffectsParams",NewName="/Script/Demos.WeatherEffectsReferences")
 +ClassRedirects=(OldName="/Script/Interactable.AInteractorActor",NewName="/Script/Interactable.InteractorActor")
++PropertyRedirects=(OldName="/Script/Interactable.InteractableComponent.Description",NewName="/Script/Interactable.InteractableComponent.DisplayDescription")
++FunctionRedirects=(OldName="/Script/Interactable.InteractableComponent.DectivateInteractionHighlight",NewName="/Script/Interactable.InteractableComponent.DeactivateInteractionHighlight")
 
 [/Script/EngineSettings.GameMapsSettings]
 GlobalDefaultGameMode=/Game/DemosGameMode.DemosGameMode_C
