Make highlight and outline effects working dinamically, finished raycast interaction detection

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -61,6 +61,7 @@ ManualIPAddress=
 +ClassRedirects=(OldName="/Script/Interactable.AInteractorActor",NewName="/Script/Interactable.InteractorActor")
 +PropertyRedirects=(OldName="/Script/Interactable.InteractableComponent.Description",NewName="/Script/Interactable.InteractableComponent.DisplayDescription")
 +FunctionRedirects=(OldName="/Script/Interactable.InteractableComponent.DectivateInteractionHighlight",NewName="/Script/Interactable.InteractableComponent.DeactivateInteractionHighlight")
++PropertyRedirects=(OldName="/Script/Interactable.InteractableComponent.bHighlightActor",NewName="/Script/Interactable.InteractableComponent.bStartWithHighlightedActor")
 
 [/Script/EngineSettings.GameMapsSettings]
 GlobalDefaultGameMode=/Game/DemosGameMode.DemosGameMode_C
