Make a simple text UI for showing interaction description when interactable is in range

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -62,6 +62,8 @@ ManualIPAddress=
 +PropertyRedirects=(OldName="/Script/Interactable.InteractableComponent.Description",NewName="/Script/Interactable.InteractableComponent.DisplayDescription")
 +FunctionRedirects=(OldName="/Script/Interactable.InteractableComponent.DectivateInteractionHighlight",NewName="/Script/Interactable.InteractableComponent.DeactivateInteractionHighlight")
 +PropertyRedirects=(OldName="/Script/Interactable.InteractableComponent.bHighlightActor",NewName="/Script/Interactable.InteractableComponent.bStartWithHighlightedActor")
++FunctionRedirects=(OldName="/Script/Interactable.InteractableComponent.OnBeginInteraction",NewName="/Script/Interactable.InteractableComponent.ReceiveOnBeginInteraction")
++FunctionRedirects=(OldName="/Script/Interactable.InteractableComponent.OnEndInteraction",NewName="/Script/Interactable.InteractableComponent.ReceiveOnEndInteraction")
 
 [/Script/EngineSettings.GameMapsSettings]
 GlobalDefaultGameMode=/Game/DemosGameMode.DemosGameMode_C
