Implement a select level menu to select between the different demos

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -59,14 +59,19 @@ ManualIPAddress=
 [CoreRedirects]
 +StructRedirects=(OldName="/Script/Demos.WeatherEffectsParams",NewName="/Script/Demos.WeatherEffectsReferences")
 +ClassRedirects=(OldName="/Script/Interactable.AInteractorActor",NewName="/Script/Interactable.InteractorActor")
-+PropertyRedirects=(OldName="/Script/Interactable.InteractableComponent.Description",NewName="/Script/Interactable.InteractableComponent.DisplayDescription")
++PropertyRedirects=(OldName="/Script/Interactable.InteractableComponent.Description",NewName="/Script/Interactable.InteractableComponent.InteractionDescription")
 +FunctionRedirects=(OldName="/Script/Interactable.InteractableComponent.DectivateInteractionHighlight",NewName="/Script/Interactable.InteractableComponent.DeactivateInteractionHighlight")
 +PropertyRedirects=(OldName="/Script/Interactable.InteractableComponent.bHighlightActor",NewName="/Script/Interactable.InteractableComponent.bStartWithHighlightedActor")
 +FunctionRedirects=(OldName="/Script/Interactable.InteractableComponent.OnBeginInteraction",NewName="/Script/Interactable.InteractableComponent.ReceiveOnBeginInteraction")
 +FunctionRedirects=(OldName="/Script/Interactable.InteractableComponent.OnEndInteraction",NewName="/Script/Interactable.InteractableComponent.ReceiveOnEndInteraction")
++PropertyRedirects=(OldName="/Script/Interactable.InteractableComponent.DisplayDescription",NewName="/Script/Interactable.InteractableComponent.InteractionDescription")
++ClassRedirects=(OldName="/Script/Demos.LevelSelectData",NewName="/Script/Demos.LevelSelectData")
++PropertyRedirects=(OldName="/Script/Demos.LevelSelectWidget.TileView",NewName="/Script/Demos.LevelSelectWidget.LevelSelectView")
 
 [/Script/EngineSettings.GameMapsSettings]
 GlobalDefaultGameMode=/Game/DemosGameMode.DemosGameMode_C
+EditorStartupMap=/Game/InteractablesDemo/InteractablesDemo.InteractablesDemo
+GameDefaultMap=/Game/Shared/MainMenu.MainMenu
 
 [/Script/Engine.WorldPartitionSettings]
 RuntimeHashDefaultClass=/Script/CoreUObject.Class'/Script/Engine.WorldPartitionRuntimeHashSet'
