Create debug menu widgets Create a form of passing interactable data to the object Remove state control from Interactor and let Interactable assign itself as the interacted object

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -67,6 +67,9 @@ ManualIPAddress=
 +PropertyRedirects=(OldName="/Script/Interactable.InteractableComponent.DisplayDescription",NewName="/Script/Interactable.InteractableComponent.InteractionDescription")
 +ClassRedirects=(OldName="/Script/Demos.LevelSelectData",NewName="/Script/Demos.LevelSelectData")
 +PropertyRedirects=(OldName="/Script/Demos.LevelSelectWidget.TileView",NewName="/Script/Demos.LevelSelectWidget.LevelSelectView")
++StructRedirects=(OldName="/Script/Interactable.InteractableData",NewName="/Script/Interactable.InteractionData")
++PropertyRedirects=(OldName="/Script/Interactable.InteractionData.MouseMovement",NewName="/Script/Interactable.InteractionData.MouseAxis")
++FunctionRedirects=(OldName="/Script/Interactable.InteractableComponent.ReceiveOnHandleInput",NewName="/Script/Interactable.InteractableComponent.ReceiveOnHandleNewData")
 
 [/Script/EngineSettings.GameMapsSettings]
 GlobalDefaultGameMode=/Game/DemosGameMode.DemosGameMode_C
